force-app/main/default/objects/Acceptance_Criteria__c/Acceptance_Criteria__c.object-meta.xml
<CustomObject>
    <label>Acceptance Criteria</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Acceptance Criteria Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acceptance Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>