force-app/main/default/objects/Acceptance_Criteria__c/fields/Given__c.field-meta.xml
<CustomField>
    <fullName>Given__c</fullName>
    <label>Given</label>
    <length>255</length>
    <type>Text</type>
</CustomField>