force-app/main/default/objects/Acceptance_Criteria__c/fields/Then__c.field-meta.xml
<CustomField>
    <fullName>Then__c</fullName>
    <label>Then</label>
    <length>255</length>
    <type>Text</type>
</CustomField>