force-app/main/default/objects/Acceptance_Criteria__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When</label>
    <length>255</length>
    <type>Text</type>
</CustomField>