force-app/main/default/objects/Acceptance_Criteria__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Acceptance Criteria</relationshipLabel>
    <relationshipName>Acceptance_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>