force-app/main/default/objects/Acceptance_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Given__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>